--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.52.1",
     "react-icons": "^5.2.1",
+    "react-photo-album": "^3.1.0",
     "react-photo-gallery": "^8.0.0",
     "react-redux": "^9.1.2",
     "react-responsive-carousel": "^3.2.23",
